added AOS animation to about section

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- Linking Stylesheet -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
@@ -30,13 +33,13 @@
                 <i class="material-icons">menu</i>
             </a>
             <ul class="right hide-on-med-and-down">
-                <li class="hover-orange">
+                <li class="nav-effect">
                     <a class="nav-about">About Me</a>
                 </li>
-                <li class="hover-orange">
+                <li class="nav-effect">
                     <a class="nav-portfolio">Portfolio</a>
                 </li>
-                <li class="hover-orange">
+                <li class="nav-effect">
                     <a class="nav-contact">Contact</a>
                 </li>
             </ul>
@@ -45,13 +48,13 @@
 
     <!-- Side Navbar -->
     <ul class="sidenav grey lighten-2" id="mobile-demo">
-        <li class="hover-orange">
+        <li class="nav-effect">
             <a class="nav-about">About Me</a>
         </li>
-        <li class="hover-orange">
+        <li class="nav-effect">
             <a class="nav-portfolio">Portfolio</a>
         </li>
-        <li class="hover-orange">
+        <li class="nav-effect">
             <a class="nav-contact">Contact</a>
         </li>
     </ul>
@@ -68,33 +71,33 @@
     <!-- About Me -->
     <div id="about-me" class="section green-border">
         <div class="row container">
-            <h2 class="header center-align"><span id="slashes">//</span> ABOUT MASON <span id="slashes">//</span></h2>
+            <h2 data-aos="fade-down" data-aos-delay="500" data-aos-duration="1000" class="header center-align"><span id="slashes">//</span> ABOUT MASON <span id="slashes">//</span></h2>
 
-            <div class="row">
-                <h5 class="center-align">I am currently taking the Full-Stack Web Development Bootcamp at The
-                    University of Texas at Austin. I have done projects involving front-end/back-end web applications
-                    and database/server management. </h5>
+            <div data-aos="zoom-in" data-aos-delay="500" data-aos-duration="1000" class="row">
+                <h5 class="center-align">
+                    Hello! My name is Mason Vickery and I am a Full-Stack Web Developer born in Austin, Texas. I love Austin and have lived here almost my whole life, except when I spent a winter in Alta, Utah to ski. I love spending time with my friends, being outdoors, and creating useful and beautiful web applications.
+                </h5>
             </div>
 
             <br>
 
             <div class="row">
 
-                <div class="col s12 m4 center-align">
+                <div data-aos="fade-up-right" data-aos-delay="500" data-aos-duration="1000" class="col s12 m4 center-align">
                     <div class="white-background">
                         <img src="assets/images/lightbulb.svg" height="100" width="100">
                         <h6>Problem Solver</h6>
                     </div>
                 </div>
 
-                <div class="col s12 m4 center-align">
+                <div data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000" class="col s12 m4 center-align">
                     <div class="white-background">
                         <img src="assets/images/magnifying.svg" height="100" width="100">
-                        <h6>Attention to Detail</h6>
+                        <h6>Detail Oriented</h6>
                     </div>
                 </div>
 
-                <div class="col s12 m4 center-align">
+                <div data-aos="fade-up-left" data-aos-delay="500" data-aos-duration="1000" class="col s12 m4 center-align">
                     <div class="white-background">
                         <img src="assets/images/driven.svg" height="100" width="100">
                         <h6>Highly Driven</h6>
@@ -109,12 +112,12 @@
         </div>
     </div>
 
-    <!-- Austin Picture -->
+    <!-- Austin Picture
     <div class="parallax-container">
         <div class="parallax">
             <img src="assets/images/austinbirdseye.jpeg">
         </div>
-    </div>
+    </div> -->
 
 
 
