styled about-me section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <a class="nav-about">About Me</a>
                 </li>
                 <li class="nav-effect">
-                    <a class="nav-portfolio">Portfolio</a>
+                    <a class="nav-projects">Projects</a>
                 </li>
                 <li class="nav-effect">
                     <a class="nav-contact">Contact</a>
@@ -52,7 +52,7 @@
             <a class="nav-about">About Me</a>
         </li>
         <li class="nav-effect">
-            <a class="nav-portfolio">Portfolio</a>
+            <a class="nav-projects">Projects</a>
         </li>
         <li class="nav-effect">
             <a class="nav-contact">Contact</a>
@@ -62,70 +62,69 @@
     <!-- Landing Page -->
     <div class="gorge">
         <div class="typewriter">
-            <h2><span class="flow-text" id="hello"></span>
-                <span class="flow-text" id="name"></span>
-                <span class="flow-text" id="welcome"></span></h2>
+            <h2><span class="flow-text" id="hello"></span></h2>
         </div>
     </div>
 
     <!-- About Me -->
-    <div id="about-me" class="section green-border">
-        <div class="row container">
-            <h2 data-aos="fade-down" data-aos-delay="500" data-aos-duration="1000" class="header center-align"><span id="slashes">//</span> ABOUT MASON <span id="slashes">//</span></h2>
+    <div class="trees">
+        <div id="about-me" class="section">
+            <div class="row container">
+                <h2 data-aos="fade-down" data-aos-delay="200" data-aos-duration="1000" class="header center-align"><span
+                        id="slashes">//</span> ABOUT MASON <span id="slashes">//</span></h2>
 
-            <div data-aos="zoom-in" data-aos-delay="500" data-aos-duration="1000" class="row">
-                <h5 class="center-align">
-                    Hello! My name is Mason Vickery and I am a Full-Stack Web Developer born in Austin, Texas. I love Austin and have lived here almost my whole life, except when I spent a winter in Alta, Utah to ski. I love spending time with my friends, being outdoors, and creating useful and beautiful web applications.
-                </h5>
+                <div data-aos="zoom-in" data-aos-delay="350" data-aos-duration="1000" class="row">
+                    <h5 class="center-align">
+                        My name is Mason Vickery and I am a Full-Stack Web Developer born in Austin, Texas. I love
+                        Austin and have lived here almost my whole life, except when I spent a winter in Alta, Utah to
+                        ski. I love spending time with my friends, being outdoors, and creating useful and beautiful
+                        web applications.
+                    </h5>
+                </div>
+
+                <br>
+
+                <div class="row">
+
+                    <div data-aos="fade-up-right" data-aos-delay="500" data-aos-duration="1000" class="col s12 m4 center-align">
+                        <div class="white-background">
+                            <img src="assets/images/lightbulb.svg" height="100" width="100">
+                            <h6>Problem Solver</h6>
+                        </div>
+                    </div>
+
+                    <div data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000" class="col s12 m4 center-align">
+                        <div class="white-background">
+                            <img src="assets/images/magnifying.svg" height="100" width="100">
+                            <h6>Detail Oriented</h6>
+                        </div>
+                    </div>
+
+                    <div data-aos="fade-up-left" data-aos-delay="500" data-aos-duration="1000" class="col s12 m4 center-align">
+                        <div class="white-background">
+                            <img src="assets/images/driven.svg" height="100" width="100">
+                            <h6>Highly Driven</h6>
+                        </div>
+                    </div>
+                </div>
+
+                <br>
+                <br>
+                <br>
+
+                <!-- Resume Button -->
+                <div class="row">
+                    <div class="col-12 center-align">
+                        <a data-aos="zoom-out-up" data-aos-delay="650" data-aos-duration="1000" id="resume-button" class="waves-effect waves-light btn-large" href="assets/resume/mason-vickery-resume.pdf" target="_blank"><i class="material-icons left">mood</i>Resume</a>
+                    </div>
+                </div>
+
             </div>
-
-            <br>
-
-            <div class="row">
-
-                <div data-aos="fade-up-right" data-aos-delay="500" data-aos-duration="1000" class="col s12 m4 center-align">
-                    <div class="white-background">
-                        <img src="assets/images/lightbulb.svg" height="100" width="100">
-                        <h6>Problem Solver</h6>
-                    </div>
-                </div>
-
-                <div data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000" class="col s12 m4 center-align">
-                    <div class="white-background">
-                        <img src="assets/images/magnifying.svg" height="100" width="100">
-                        <h6>Detail Oriented</h6>
-                    </div>
-                </div>
-
-                <div data-aos="fade-up-left" data-aos-delay="500" data-aos-duration="1000" class="col s12 m4 center-align">
-                    <div class="white-background">
-                        <img src="assets/images/driven.svg" height="100" width="100">
-                        <h6>Highly Driven</h6>
-                    </div>
-                </div>
-            </div>
-
-
-
-
-
         </div>
     </div>
 
-    <!-- Austin Picture
-    <div class="parallax-container">
-        <div class="parallax">
-            <img src="assets/images/austinbirdseye.jpeg">
-        </div>
-    </div> -->
-
-
-
-
-
-
-    <!-- PORTFOLIO -->
-    <div id="portfolio" class="section grey lighten-2 orange-border">
+    <!-- PROJECTS -->
+    <div id="projects" class="section grey lighten-2 orange-border">
         <div class="row container">
             <h2 class="header center-align"><span id="project-slashes">//</span> PROJECTS <span id="project-slashes">//</span></h2>
         </div>
@@ -201,7 +200,7 @@
         </div>
     </div>
 
-    <!-- Footer -->
+    <!-- FOOTER -->
     <footer class="page-footer blue-grey darken-1">
         <div class="container">
             <div class="row">
@@ -230,7 +229,7 @@
                             <!-- linkedin -->
                             <span class="icon-space">
                                 <a href="https://www.linkedin.com/in/masonvickery/" target="_blank">
-                                    <img class="icon-size"  src="https://image.flaticon.com/icons/svg/25/25320.svg" />
+                                    <img class="icon-size" src="https://image.flaticon.com/icons/svg/25/25320.svg" />
                             </span>
 
                             <!-- email -->
