added scroll fadeaway on header

--- a/index.html
+++ b/index.html
@@ -82,12 +82,9 @@
             <div id="hello-content" class="row" data-aos="zoom-in" data-aos-delay="500" data-aos-duration="2000">
                 <div class="col s12 m12 l12 xl12">
                     <div>
-                        <h4>Howdy! I'm Mason.</h4>
-                    </div>
-                </div>
-                <div class="col s12 m12 l12 xl12">
-                    <div>
-                        <h4>I'm a full-stack web developer</h4>
+                        <h6>Hi, I'm</h6>
+                        <h4>MASON VICKERY</h4>
+                        <h6>I'm a web developer.</h6>
                     </div>
                 </div>
             </div>
@@ -327,7 +324,7 @@
 
                 <div class="row">
                     <div class="center-align">
-                        <h5>Contact</h5>
+                        <h4>Contact</h4>
 
 
 
@@ -353,16 +350,16 @@
 
                         <div id="contact-icons">
                             <span class="col s3">
-                                GitHub
+                                GitHub <i class="fab fa-github"></i>
                             </span>
                             <span class="col s3">
-                                Linkedin
+                                Linkedin <i class="fab fa-linkedin"></i>
                             </span>
                             <span class="col s3">
-                                Email
+                                Email <i class="far fa-envelope"></i>
                             </span>
                             <span class="col s3">
-                                Resume
+                                Resume <i class="far fa-file"></i>
                             </span>
 
                         </div>
@@ -372,7 +369,7 @@
                 </div>
                 <div class="container row copyright">
                     <div class="col s12 copyright-center">
-                        <h4>© 2018 Mason Vickery</h4>
+                        <h6>© 2018 Mason Vickery</h6>
                     </div>
                 </div>
             </div>
